<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageForumActivity">

    <Button
        android:id="@+id/btnPostForum"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/baseline_post_add_black_18dp"
        android:drawablePadding="20dp"
        android:text="@string/post_forum"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEditForum"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="292dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/baseline_edit_black_18dp"
        android:drawablePadding="20dp"
        android:text="@string/edit_forum"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPostForum"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDeleteForum"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="292dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/baseline_delete_outline_black_18dp"
        android:drawablePadding="20dp"
        android:text="@string/delete_forum"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditForum"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>