<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostForumActivity">

    <TextView
        android:id="@+id/forumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forum_title"
        android:layout_marginLeft="@dimen/text_forum_padding"
        android:layout_marginTop="@dimen/text_forum_padding"
        android:textSize="@dimen/edit_forum"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editForumTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forum_title"
        android:layout_marginLeft="@dimen/edit_forum_padding"
        android:layout_marginRight="@dimen/edit_forum_padding"
        android:layout_marginBottom="@dimen/edit_forum_padding"
        android:textSize="@dimen/edit_forum"
        android:paddingTop="@dimen/zero"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forumTitle"
        android:theme="@style/EditTextTheme"
        android:maxLength="70"
        android:maxLines="2"
        android:inputType="textMultiLine"/>

    <TextView
        android:id="@+id/forumDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_forum_padding"
        android:text="@string/forum_desc"
        android:textSize="@dimen/edit_forum"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editForumTitle" />

    <EditText
        android:id="@+id/editForumDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forum_desc"
        android:layout_marginLeft="@dimen/edit_forum_padding"
        android:layout_marginRight="@dimen/edit_forum_padding"
        android:layout_marginBottom="@dimen/edit_forum_padding"
        android:textSize="@dimen/edit_forum"
        android:paddingTop="@dimen/zero"
        android:ems="10"
        android:lines="4"
        android:minLines="2"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forumDesc"
        android:theme="@style/EditTextTheme" />

    <Button
        android:id="@+id/btnPostForumPhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/post_forum_photo"
        android:layout_marginLeft="@dimen/edit_forum_padding"
        android:layout_marginRight="@dimen/edit_forum_padding"
        android:layout_marginBottom="@dimen/edit_forum_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editForumDesc" />

    <ImageView
        android:id="@+id/forumPhotoView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="@dimen/edit_forum_padding"
        android:layout_marginRight="@dimen/edit_forum_padding"
        android:layout_marginBottom="@dimen/edit_forum_padding"
        app:layout_constraintBottom_toBottomOf="@+id/btnPostForumPhoto"
        app:layout_constraintEnd_toEndOf="@+id/btnPostForumPhoto"
        app:layout_constraintStart_toStartOf="@+id/btnPostForumPhoto"
        app:layout_constraintTop_toBottomOf="@+id/editForumDesc"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnPost"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/edit_forum_padding"
        android:layout_marginLeft="@dimen/edit_forum_padding"
        android:layout_marginRight="@dimen/edit_forum_padding"
        android:layout_marginBottom="@dimen/edit_forum_padding"
        android:text="@string/post"
        android:textAllCaps="true"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.262" />

</androidx.constraintlayout.widget.ConstraintLayout>