<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditForumDetailActivity"
    android:fillViewport="true">

    <ImageView
        android:id="@+id/forum_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/edit_forum_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editForumDetailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forum_title"
        android:layout_marginLeft="@dimen/text_forum_padding"
        android:layout_marginTop="@dimen/edit_forum_padding"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_image" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="title"
        android:maxLength="70"
        android:textSize="20dp"
        android:maxLines="2"
        android:layout_marginLeft="@dimen/edit_forum_padding"
        android:layout_marginRight="@dimen/edit_forum_padding"
        android:layout_marginBottom="@dimen/edit_forum_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editForumDetailTitle"
        android:theme="@style/EditTextTheme" />

    <TextView
        android:id="@+id/editForumDetailDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forum_desc"
        android:layout_marginLeft="@dimen/text_forum_padding"
        android:layout_marginTop="@dimen/text_forum_padding"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title" />

    <EditText
        android:id="@+id/edit_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:inputType="textMultiLine"
        android:text="desc"
        android:maxLines="4"
        android:scrollbars="vertical"
        android:layout_marginLeft="@dimen/edit_forum_padding"
        android:layout_marginRight="@dimen/edit_forum_padding"
        android:layout_marginBottom="@dimen/edit_forum_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editForumDetailDesc"
        android:theme="@style/EditTextTheme" />

    <TextView
        android:id="@+id/editForumIns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_forum_ins"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edit_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="edit"
        android:textSize="20dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/edit_forum_padding"
        android:layout_marginLeft="@dimen/edit_forum_padding"
        android:layout_marginRight="@dimen/edit_forum_padding"
        android:layout_marginBottom="@dimen/edit_forum_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editForumIns"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>